--- a/package.json
+++ b/package.json
@@ -39,5 +39,18 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daniits/decentbakeryswl.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/daniits/decentbakeryswl/issues"
+  },
+  "homepage": "https://github.com/daniits/decentbakeryswl#readme"
 }
